--- a/1.html
+++ b/1.html
@@ -13,10 +13,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Домашняя работа 3</title>
+    <title><strong>Домашняя работа 3</strong></title>
     <script src="1.js" defer></script>
 </head>
 <body>
+    Привет!
+    
     
 </body>
 </html>
