--- a/2.html
+++ b/2.html
@@ -15,6 +15,7 @@ Cоздать функцию greeting, которая принимает в ка
     <script src="2.js" defer></script>
 </head>
 <body>
+    Добавлен какой-то текст.
     
 </body>
 </html>
