--- a/2.html
+++ b/2.html
@@ -16,6 +16,8 @@ Cоздать функцию greeting, которая принимает в ка
 </head>
 <body>
     Добавлен какой-то текст.
+    Добавлен еще текст.
+    
     
 </body>
 </html>
